[package]
name = "iot-device-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmozaik_iot = { path = "../libmozaik_iot" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
# serde_json = "1.0.113"
