[package]
name = "iot-device-simulator"
description = "The IoT device simulator for the MOZAIK SBO project. This program simulates an IoT device by reading data from a dataset and ingesting this data in MOZAIK."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmozaik_iot = { path = "../libmozaik_iot" }
client_auth = { path = "../client_auth" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
